--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -9,7 +9,7 @@
 }
 
 section button {
-    font-size: 18;
+    font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
     height: 48px;
