--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -4,12 +4,11 @@
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     display: flex;
-    /* justify-content: right; */
     align-items: center;
 }
 
 section button {
-    font-size: 18;
+    font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
     height: 48px;
