--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -4,8 +4,9 @@
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     display: flex;
+    margin-bottom: 30px;
 }
-section button {
+.filters button {
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
