--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -22,7 +22,7 @@
     border: 0;
 }
 
-.locations, .amenities {
+.filters .locations, .filters .amenities {
     height: 100%;
     width: 25%;
     margin-left: 50px;
@@ -30,20 +30,20 @@
     flex-direction: column;
     justify-content: center;
 }
-.locations {
+.filters .locations {
     border-right: 1px solid #DDDDDD;
 }
 
-.locations h3, .amenities h3 {
+.filters .locations h3, .filters .amenities h3 {
     font-weight: 600;
 }
 
-.locations h4, .amenities h4 {
+.filters .locations h4, .filters .amenities h4 {
     font-weight: 400;
     font-size: 14px;
 }
 
-.popover {
+.filters .popover {
     display: none;
     position: absolute;
     background-color: #FAFAFA;
@@ -55,18 +55,18 @@
     padding:30px 25px;
 }
 
-.locations:hover .popover,
-.amenities:hover .popover  {
+.filters .locations:hover .popover,
+.filters .amenities:hover .popover  {
     display: block;
 }
 
-.popover h2 {
+.filters .popover h2 {
     font-size: 16px;
 }
-.popover ul {
+.filters .popover ul {
     margin-bottom: 20px;
 }
-.popover li {
+.filters .popover li {
     display: block;
     margin-left: 20px;
 }
